# mobotv

./: AUTHORS  ChangeLog  Makefile  Makefile.in  README.md  config.h  config.h.in  config.status  configure  configure.ac
autom4te.cache/: output.4  requests  traces.0  traces.1  traces.3  traces.4
autom4te.cache/.svn/: all-wcprops  entries
autom4te.cache/.svn/text-base/: output.1.svn-base  output.2.svn-base  requests.svn-base  traces.2.svn-base
pixmaps/: Makefile  Makefile.in
pixmaps/.svn/: all-wcprops  entries
pixmaps/.svn/text-base/: Makefile.am.svn-base  Makefile.in.svn-base  bookmark-new.png.svn-base  folder-open.png.svn-base  media-playback-start.png.svn-base  stock_bookmark.png.svn-base
src/: Makefile  Makefile.am  Makefile.in  about_win.c  about_win.h  application.c  application.h  ch_info.c  ch_info.h  ch_list.c  ch_list.h  ch_view.c  ch_view.h  channel.h  chmg_win.c  chmg_win.h  conf_win.c  conf_win.h  conffile.c  conffile.h  main.c  mobotv  ui.c  user_conf.h  video_ctrl.c  video_ctrl.h  video_player.c  video_player.h
src/.deps/: mobotv-about_win.Po  mobotv-application.Po  mobotv-ch_info.Po  mobotv-ch_list.Po  mobotv-ch_view.Po  mobotv-channel.Po  mobotv-chmg_win.Po  mobotv-conf_win.Po  mobotv-input_dialog.Po  mobotv-main.Po  mobotv-ui.Po  mobotv-user_conf.Po  mobotv-video_ctrl.Po  mobotv-video_player.Po
src/.svn/: all-wcprops  entries
src/.svn/text-base/: Makefile.am.svn-base  Makefile.in.svn-base  application.c.svn-base  application.h.svn-base  channel.c.svn-base  chmg_win.c.svn-base  conf_win.c.svn-base  input_dialog.c.svn-base  input_dialog.h.svn-base  ui.h.svn-base  user_conf.c.svn-base  video_player.h.svn-base
